--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -7,3 +7,7 @@ test:
 # Formats the world-chain-builder
 fmt:
     cargo fmt
+
+# Runs the block building assertions
+assertor *args='':
+    cargo run --package assertor -- $@
