--- a/.github/workflows/devnet-ci.yml
+++ b/.github/workflows/devnet-ci.yml
@@ -2,7 +2,7 @@ name: Block Building CI
 on:
   pull_request:
     branches: [main]
-    # types: [review_requested, ready_for_review]
+    types: [review_requested, ready_for_review]
 
 jobs:
   tests:
