--- a/.github/workflows/devnet-ci.yml
+++ b/.github/workflows/devnet-ci.yml
@@ -5,6 +5,10 @@ on:
     types: [review_requested, ready_for_review]
   workflow_dispatch:
 
+env:
+  CARGO_TERM_COLOR: always
+  RUST_LOG: INFO
+
 jobs:
   tests:
     runs-on: ubuntu-latest
