--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -70,13 +70,14 @@ jobs:
         run: |
           kurtosis engine status
           kurtosis enclave ls || ( kurtosis engine restart && kurtosis enclave ls )
-
+      
       - name: Setup Docker Environment
         run: |
-          eval $(minikube docker-env)
-
+          echo $(minikube -p minikube docker-env) >> $GITHUB_ENV
+          
       - name: Setup Devnet
         run: |
+          eval $(minikube -p docker-env)
           just devnet-up
         
       - name: Block Building
