--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -1,10 +1,8 @@
 name: K8s CI
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * 1'
 
 env:
   CARGO_TERM_COLOR: always
