--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pbh-verifier/lib/forge-std"]
 	path = pbh-verifier/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "pbh-verifier/lib/world-id-contracts"]
+	path = pbh-verifier/lib/world-id-contracts
+	url = https://github.com/worldcoin/world-id-contracts
