--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pbh-verifier/lib/semaphore-v3"]
 	path = pbh-verifier/lib/semaphore-v3
 	url = https://github.com/worldcoin/semaphore-v3
+[submodule "pbh-verifier/lib/account-abstraction"]
+	path = pbh-verifier/lib/account-abstraction
+	url = https://github.com/eth-infinitism/account-abstraction
