--- a/world-chain-builder/crates/world/node/Cargo.toml
+++ b/world-chain-builder/crates/world/node/Cargo.toml
@@ -40,10 +40,28 @@ futures.workspace = true
 clap.workspace = true
 
 [dev-dependencies]
+world-chain-builder-pbh.workspace = true
+world-chain-builder-primitives.workspace = true
+world-chain-builder-rpc.workspace = true
+world-chain-builder-pool = { workspace = true, features = ["test"] }
+
+reth-e2e-test-utils.workspace = true
+reth-evm.workspace = true
+reth-node-core.workspace = true
+reth-optimism-consensus.workspace = true
+reth-optimism-evm.workspace = true
+revm-primitives.workspace = true
+
+alloy-genesis.workspace = true
+alloy-network.workspace = true
+alloy-signer-local.workspace = true
+alloy-eips.workspace = true
+
 criterion.workspace = true
 semaphore.workspace = true
-
-world-chain-builder-pool = { workspace = true, features = ["test"] }
+serial_test.workspace = true
+serde_json.workspace = true
+chrono.workspace = true
 
 [[bench]]
 name = "validate_transaction"
