--- a/world-chain-builder/crates/world/rpc/Cargo.toml
+++ b/world-chain-builder/crates/world/rpc/Cargo.toml
@@ -25,5 +25,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types.workspace = true
 
 jsonrpsee.workspace = true
-
 tracing.workspace = true
+reqwest.workspace = true
+serde_json.workspace = true
+
