--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -46,6 +46,8 @@ rayon.workspace = true
 [dev-dependencies]
 ethers-core.workspace = true
 test-case.workspace = true
+alloy-signer-local.workspace = true
+reth-e2e-test-utils.workspace = true
 
 [features]
 default = []
