--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,14 +1,25 @@
 [profile.default]
+evm_version = 'cancun'
 src = "src"
 out = "out"
 libs = ["lib"]
 via_ir = true
+optimizer = true
+optimizer_runs = 200
 
 remappings = [
     "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@account-abstraction/contracts/=lib/account-abstraction/contracts/",
     "@world-id-contracts/=lib/world-id-contracts/src/",
     "@account-abstraction/=lib/account-abstraction/contracts/",
     "@BokkyPooBahsDateTimeLibrary/=lib/BokkyPooBahsDateTimeLibrary/contracts/",
     "@helpers/=src/helpers/",
     "openzeppelin-contracts/=lib/world-id-contracts/lib/openzeppelin-contracts/contracts/",
 ]
+
+[fuzz]
+runs = 5000
+max_test_rejects = 150000
+
+
+
