test: e2e tests against mainnet entry point

--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Run Forge tests
         working-directory: contracts
         run: |
-          forge test -vvv
+          forge test -f "${{ secrets.ETHEREUM_PROVIDER }}" -vvv
         id: test
