--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -74,15 +74,7 @@ jobs:
       - name: Setup Devnet
         run: |
           eval $(minikube -p minikube docker-env)
-          just devnet-up
-          
-      - name: Block Building
-        run: |
-          just assertor -b
-
-      - name: Fallback
-        run: |
-          just assertor -f
+          just e2e-test
 
       - name: Devnet Down
         run: |
