--- a/.github/workflows/run-k8s.yml
+++ b/.github/workflows/run-k8s.yml
@@ -13,8 +13,20 @@ jobs:
     runs-on: ubuntu-22.04-32core
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          
       - uses: taiki-e/install-action@just
       - uses: dtolnay/rust-toolchain@stable
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
+      - name: Show Forge version
+        run: |
+          forge --version
 
       - name: Setup Kurtosis
         run: |
