--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -1,8 +1,8 @@
 set positional-arguments
 
 # Tests the world-chain-builder
-test:
-    cargo test -- --test-threads=1
+test: 
+  cargo nextest run --workspace
 
 # Formats the world-chain-builder
 fmt: fmt-fix fmt-check
